# lsdf

./: .gitignore  404.html  Cargo.toml  README.md  book.toml  chapter_1.html  index.html  print.html
.github/workflows/: mdbook.yml
src/: lib.rs
src/format/: anim.rs  component_ptr.rs  mod.rs
